config/deploy/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: puma
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 3000
  selector:
    name: puma
